Reduce code duplication when applying CDDB results

The code to update the contents of the ET_File in the DLM and non-DLM
cases was identical, so factor it out to a new
set_et_file_from_cddb_album() function. As a side effect, avoid a crash
when applying results from CDDB searches.

https://bugzilla.gnome.org/show_bug.cgi?id=766499